--- a/styles/styles.css
+++ b/styles/styles.css
@@ -764,8 +764,26 @@ Media Queries
 */
 @media screen and (max-width: 980px) {
 	
+	/* Header
+	---------------------------------*/
 	header.hero {
 		background-image: none;
+		padding-bottom: 40px;
+	}
+	.hero .badge {
+		display: none;
+	}
+	.hero .site-title {
+		font-size: 6rem;
+	}
+	.hero .tagline {
+		max-width: 70%;
+	}
+	.hero .btn {
+		display: block
+	}
+	.hero .btn-secondary {
+		margin: 0 0 1rem 0
 	}
 
 }
